[backend] update structure, add search by id, summary, openapi
